# ibus

./: CMakeLists.txt  README.md  helpers.h  ibus.c  ibus_private.h  idf_component.yml
esp-idf/: CMakeLists.txt  idf_component.yml
esp-idf/main/: main.c
examples/esp-idf/: CMakeLists.txt  Makefile
examples/esp-idf/main/: Kconfig.projbuild  main.c
examples/linux/: CMakeLists.txt  main.c
include/: ibus.h
include/ibus/: ibus.h
include/ibus/sys/: sys_esp.h  sys_linux.h
lib/: helpers.h  ibus.c
lib/sys/: esp-idf.c  linux.c  sys.h
lowlevel/: linux.c
test/: CMakeLists.txt  main.c
